# agentabi

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentabi/: __init__.py  cli.py  compare.py  demo.py  models.py  report.py  scanner.py  scoring.py  security.py
agentabi/runtimes/: __init__.py  base.py  common.py  hermes.py  openclaw.py
tests/: conftest.py  test_cli.py  test_cli_extended.py  test_common.py  test_compare.py  test_compare_extended.py  test_hermes.py  test_report_extended.py  test_reports.py  test_scanner.py  test_security.py  test_security_extended.py
tests/fixtures/hermes_broader_permissions/: hermes.yaml
tests/fixtures/hermes_broader_permissions/skills/: reporter.yaml
tests/fixtures/hermes_broader_permissions/state/memory/: core.md
tests/fixtures/hermes_broken/: hermes.yaml  schedules.yaml
tests/fixtures/hermes_broken/skills/: research.yaml
tests/fixtures/hermes_healthy/: hermes.yaml  hooks.yaml  schedules.yaml
tests/fixtures/hermes_healthy/identity/: AGENT.md
tests/fixtures/hermes_healthy/state/memory/: 2025-02.md
tests/fixtures/malformed_state/: openclaw.json
tests/fixtures/malformed_state/cron/: jobs.json
tests/fixtures/openclaw_healthy/: openclaw.json
tests/fixtures/openclaw_healthy/cron/: jobs.json
tests/fixtures/openclaw_healthy/hooks/: hooks.json
tests/fixtures/openclaw_healthy/memory/: 2025-01.md
tests/fixtures/openclaw_healthy/skills/: reporter.md  research.md
tests/fixtures/secrets_state/: .env  auth.json  id_rsa  openclaw.json
tests/fixtures/secrets_state/memory/: core.md
