[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentabi"
version = "0.1.0"
description = "Detect what an AI-agent update or migration will forget, disable, or silently change before you deploy it."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "AgentABI contributors"}]
keywords = ["ai-agents", "migration", "compatibility", "diff", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.0",
  "types-PyYAML>=6.0",
]

[project.scripts]
agentabi = "agentabi.cli:app"

[project.urls]
Homepage = "https://gitlab.com/jairgimenez233-group/skibidi"

[tool.setuptools.packages.find]
include = ["agentabi*"]

[tool.setuptools.package-data]
agentabi = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["agentabi"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
